# linkollector-win

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: acting_dialog.cpp  acting_dialog.h  activity.cpp  activity.h  constants.h  dark_mode.cpp  dark_mode.h  font.cpp  font.h  handlers.cpp  handlers.h  line.cpp  line.h  macros.h  main.cpp  main_window.cpp  main_window.h  text_field.cpp  text_field.h  textfield.cpp  textfield.h
src/wrappers/zmq/: context.cpp  context.h  poll.cpp  poll.h  poll_event.cpp  poll_event.h  poll_response.cpp  poll_response.h  poll_target.cpp  poll_target.h  socket.cpp  socket.h
